ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    config.kubernetes.io/depends-on: apps/namespaces/default/Deployment/frontend
spec:
  rules:
    - host: frontend.gabrielricardo.com
      http:
        paths:
          - path: /create
            pathType: Prefix
            backend:
              service:
                name: guess-service
                port:
                  number: 5000
          - path: /breaker
            pathType: Prefix
            backend:
              service:
                name: guess-service
                port:
                  number: 5000
          - path: /guess
            pathType: Prefix
            backend:
              service:
                name: guess-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 3000
